# my_project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  data.dvc  hello.py  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: cml_data.yaml  codecheck.yaml  test.yaml
configs/: config.py
dockerfiles/: train.dockerfile  typing.py
docs/: mkdocs.yaml
dtu_mlops/dxiiqbwh/checkpoints/: epoch=0-step=1719.ckpt
dtu_mlops/y764gh4v/checkpoints/: epoch=0-step=1719.ckpt
models/: epoch=2-step=1029.ckpt  epoch=5-step=2058.ckpt  model.pth
src/my_project/: data.py  dataset_statistics.py  evaluate.py  iris_classifier.py  model.py  model_solution.py  train.py
tests/: test_data.py  test_model.py  test_training.py
