[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.0.1"
description = "Plantvillage"
authors = [
  { name = "Viktoria", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements_dev.txt"]}

[tool.ruff]
line-length = 120
select = ["I001", "I002"]  # Corrected to include valid import sorting rules
extend-ignore = ["I001"]  # Optionally ignore unsorted import warnings if necessary
fix = true  # Automatically fix some issues with imports, etc.

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "my_project.train:main"
evaluate = "my_project.evaluate:main"
greetings = "my_project.iris_classifier:main"



